[project]
name = "db-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "googleapis-common-protos==1.75.0",
    "grpcio==1.81.0",
    "grpcio-tools==1.81.0",
    "protobuf==6.33.6",
    "setuptools==82.0.1",
    "typing-extensions==4.15.0"
]
